--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
 .App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  width: 1500px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.menu{
+  width: 300px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+  
+}
+
+.menu_link{
+  
+  width: 100px;
+  height: 40px;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #d3fd86;
+  text-decoration: none;
+  border-radius: 15px;
+  
+
 }
 
-.App-link {
-  color: #61dafb;
+
+
+.menu_container{
+  display: flex;
+  justify-content: space-around;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list_data{
+  margin: 0 auto; 
+  width:350px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.list_container{
+ 
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.list_itemuser{
+  width: 1000px;
+  height: 200px;
+  padding: 10px;
+  box-sizing: border-box;
+  border: 1px solid black;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+
+
+}
+.list_itemuser button{
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+ 
+ }
+
+ .list_itemuser button:last-child{
+  position: absolute;
+  bottom: 5px;
+  right: 155px;
+ 
+ }
+.list_itemuser p{
+ padding: 0;
+  margin: 0;
+
+
 }
